Fix: styling on mobile

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 .box {
-    background-color: #dfebeb;
+    background: linear-gradient(to right, rgba(255, 126, 95, 0.8), rgba(254, 180, 123, 0.8)); /* Gradient with 70% opacity */
     color: #011328;
     padding: 14px;
     text-align: center;
@@ -33,6 +33,18 @@ body {
     cursor: pointer;
     text-decoration: none;
     transition: transform 0.3s ease;
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 28px;
+    }
+    .box {
+        margin: 10px 0;
+        width: 80%;
+    }
 }
 
 .box:hover {
